--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,7 @@
 		"ms-vscode.azurecli",
 		"ms-azuretools.vscode-docker",
 		"ms-kubernetes-tools.vscode-kubernetes-tools",
+		"ms-kubernetes-tools.vscode-aks-tools",
 		"ms-dotnettools.vscode-dotnet-runtime",
 		"ms-azuretools.vscode-bicep",
 		"msazurermtools.azurerm-vscode-tools",
