--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,6 +25,7 @@
 		"ms-azuretools.vscode-docker",
 		"ms-kubernetes-tools.vscode-kubernetes-tools",
 		"ms-kubernetes-tools.vscode-aks-tools",
+		"ms-kubernetes-tools.aks-devx-tools",
 		"ms-dotnettools.vscode-dotnet-runtime",
 		"ms-azuretools.vscode-bicep",
 		"msazurermtools.azurerm-vscode-tools",
