--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,43 +1,19 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.238.1/containers/ubuntu
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
 	"name": "Ubuntu",
-	"build": {
-		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick an Ubuntu version: jammy / ubuntu-22.04, focal / ubuntu-20.04, bionic /ubuntu-18.04
-		// Use ubuntu-22.04 or ubuntu-18.04 on local arm64/Apple Silicon.
-		"args": {
-			"VARIANT": "ubuntu-22.04"
-		}
-	},
-	"remoteUser": "vscode",
+	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
-		"kubectl-helm-minikube": "latest",
-		"terraform": "latest",
-		"github-cli": "latest",
-		"azure-cli": "latest",
-		"sshd": "latest"
-	},
-	"extensions": [
-		"cschleiden.vscode-github-actions",
-		"github.copilot",
-		"ms-vscode.azurecli",
-		"ms-azuretools.vscode-docker",
-		"ms-kubernetes-tools.vscode-kubernetes-tools",
-		"ms-kubernetes-tools.vscode-aks-tools",
-		"ms-kubernetes-tools.aks-devx-tools",
-		"ms-dotnettools.vscode-dotnet-runtime",
-		"ms-azuretools.vscode-bicep",
-		"msazurermtools.azurerm-vscode-tools",
-		"ms-vscode.azure-account",
-		"ms-azuretools.vscode-azureresourcegroups",
-		"heaths.vscode-guid",
-		"donjayamanne.githistory"
-	],
+		"ghcr.io/rjfmachado/devcontainer-features/cloud-native:1": {}
+	}
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "az bicep install && az extension add --name ssh && az extension add --name aks-preview && wget https://github.com/Azure/kubelogin/releases/download/v0.0.20/kubelogin-linux-amd64.zip && unzip kubelogin-linux-amd64.zip && sudo mv bin/linux_amd64/kubelogin /usr/local/bin/ && rm kubelogin-linux-amd64.zip && rm -rf bin && curl -s https://fluxcd.io/install.sh | bash"
-	//"postStartCommand": "",
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	// "postCreateCommand": "uname -a",
+	// Configure tool-specific properties.
+	// "customizations": {},
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
