--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,23 @@
 			"flux": "latest",
 			"cilium": "latest"
 		}
-	}
+	},
+	"extensions": [
+		"cschleiden.vscode-github-actions",
+		"github.copilot",
+		"ms-vscode.azurecli",
+		"ms-azuretools.vscode-docker",
+		"ms-kubernetes-tools.vscode-kubernetes-tools",
+		"ms-kubernetes-tools.vscode-aks-tools",
+		"ms-kubernetes-tools.aks-devx-tools",
+		"ms-dotnettools.vscode-dotnet-runtime",
+		"ms-azuretools.vscode-bicep",
+		"msazurermtools.azurerm-vscode-tools",
+		"ms-vscode.azure-account",
+		"ms-azuretools.vscode-azureresourcegroups",
+		"heaths.vscode-guid",
+		"donjayamanne.githistory"
+	]
 }
 // Features to add to the dev container. More info: https://containers.dev/features.
 // "features": {},
