--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
 		"ghcr.io/devcontainers/features/azure-cli:1": {
-			"extensions": "ssh, aks-preview",
+			"extensions": "ssh, aks-preview, k8s-extension",
 			"installBicep": true
 		},
 		"ghcr.io/devcontainers/features/sshd:1": {},
