--- a/gitops/ingress/helm.release.nginx.yaml
+++ b/gitops/ingress/helm.release.nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ingress-nginx
-  namespace: default
+  namespace: ingress
 spec:
   interval: 5m
   chart:
@@ -15,3 +15,5 @@ spec:
       interval: 1m
   values:
     controller.service.annotations.service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+    controller.service.annotations.service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
+    controller.replicaCount: 2
