move to same namespace

--- a/gitops/cluster/helm.repo.nginx.yaml
+++ b/gitops/cluster/helm.repo.nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: ingress-nginx
-  namespace: default
+  namespace: ingress
 spec:
   interval: 1m
   url: https://kubernetes.github.io/ingress-nginx
