--- a/gitops/ingress/helm.release.nginx.yaml
+++ b/gitops/ingress/helm.release.nginx.yaml
@@ -11,7 +11,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
-        namespace: default
+        namespace: ingress
       interval: 1m
   values:
     controller.service.annotations.service.beta.kubernetes.io/azure-load-balancer-internal: "true"
