--- a/gitops/ingress/helm.release.nginx.yaml
+++ b/gitops/ingress/helm.release.nginx.yaml
@@ -2,7 +2,6 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ingress-nginx
-  namespace: ingress
 spec:
   interval: 5m
   chart:
@@ -13,6 +12,7 @@ spec:
         name: ingress-nginx
         namespace: ingress
       interval: 1m
+  targetNamespace: ingress
   values:
     controller.service.annotations.service.beta.kubernetes.io/azure-load-balancer-internal: "true"
     controller.service.annotations.service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
