--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,13 @@
 			"kubelogin": "latest",
 			"flux": "latest",
 			"cilium": "latest"
+		},
+		"ghcr.io/dhoeric/features/stern:1": {},
+		"ghcr.io/dhoeric/features/k9s:1": {
+			"version": "latest"
+		},
+		"ghcr.io/dhoeric/features/opa:1": {
+			"version": "latest"
 		}
 	},
 	"extensions": [
