--- a/gitops/cluster/helm.release.nginx.yaml
+++ b/gitops/cluster/helm.release.nginx.yaml
@@ -14,7 +14,7 @@ spec:
         namespace: flux-system
       interval: 1m
   targetNamespace: ingress-system
-  values:
-    service.annotations.service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-    service.annotations.service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
-    controller.replicaCount: 2
+  valuesFrom:
+    - kind: ConfigMap
+      name: prod-env-values
+      valuesKey: internal-ingress.yaml
