--- a/gitops/cluster/helm.release.nginx.yaml
+++ b/gitops/cluster/helm.release.nginx.yaml
@@ -16,7 +16,8 @@ spec:
       values:
         controller:
           service:
-            annotations.service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-            annotations.service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
+            annotations:
+              service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+              service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
           replicaCount: 2
   targetNamespace: ingress-system
