--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
 		},
 		"ghcr.io/dhoeric/features/opa:1": {
 			"version": "latest"
-		}
+		},
+		"ghcr.io/devcontainers-contrib/features/grpcurl-asdf:2": {}
 	},
 	"extensions": [
 		"cschleiden.vscode-github-actions",
