--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,23 +25,27 @@
 			"version": "latest"
 		}
 	},
-	"extensions": [
-		"cschleiden.vscode-github-actions",
-		"github.copilot",
-		"ms-vscode.azurecli",
-		"ms-azuretools.vscode-docker",
-		"ms-kubernetes-tools.vscode-kubernetes-tools",
-		"ms-kubernetes-tools.vscode-aks-tools",
-		"ms-kubernetes-tools.aks-devx-tools",
-		"ms-dotnettools.vscode-dotnet-runtime",
-		"ms-azuretools.vscode-bicep",
-		"msazurermtools.azurerm-vscode-tools",
-		"ms-vscode.azure-account",
-		"ms-azuretools.vscode-azureresourcegroups",
-		"heaths.vscode-guid",
-		"donjayamanne.githistory",
-		"mhutchie.git-graph"
-	]
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"cschleiden.vscode-github-actions",
+				"github.copilot",
+				"ms-vscode.azurecli",
+				"ms-azuretools.vscode-docker",
+				"ms-kubernetes-tools.vscode-kubernetes-tools",
+				"ms-kubernetes-tools.vscode-aks-tools",
+				"ms-kubernetes-tools.aks-devx-tools",
+				"ms-dotnettools.vscode-dotnet-runtime",
+				"ms-azuretools.vscode-bicep",
+				"msazurermtools.azurerm-vscode-tools",
+				"ms-vscode.azure-account",
+				"ms-azuretools.vscode-azureresourcegroups",
+				"heaths.vscode-guid",
+				"donjayamanne.githistory",
+				"mhutchie.git-graph"
+			]
+		}
+	}
 }
 // Features to add to the dev container. More info: https://containers.dev/features.
 // "features": {},
