--- a/gitops/cluster/azure-alb.yaml
+++ b/gitops/cluster/azure-alb.yaml
@@ -1,20 +1,17 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ingress-application-load-balancer
+  name: azure-alb
   namespace: flux-system
 spec:
   interval: 5m
   chart:
     spec:
-      chart: alb-controller
-      sourceRef:
-        kind: HelmRepository
-        name: azure-alb
-        namespace: flux-system
+      chart: oci://mcr.microsoft.com/application-lb/charts/alb-controller
+
       interval: 5m
   targetNamespace: azure-alb-system
-  # values:
+  # valuesFrom:
   #   albController:
   #     podIdentity:
-  #       clientID: ""
+  #       clientID:
