--- a/gitops/cluster/azure-alb.yaml
+++ b/gitops/cluster/azure-alb.yaml
@@ -1,19 +1,17 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
 metadata:
   name: azure-alb
   namespace: flux-system
 spec:
-  interval: 5m
-  chart:
-    spec:
-      chart: alb-controller
-      sourceRef:
-        kind: HelmRepository
-        name: azure-alb
-        namespace: flux-system
-      interval: 5m
+  interval: 10m
   targetNamespace: azure-alb-system
+  prune: true
+  sourceRef:
+    kind: OCIRepository
+    name: azure-alb
+    namespace: flux-system
+  path: ./
   values:
     albController:
       podIdentity:
