--- a/gitops/cluster/helm.repo.azure-alb.yaml
+++ b/gitops/cluster/helm.repo.azure-alb.yaml
@@ -1,12 +1,12 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
-metadata:
-  name: azure-alb
-  namespace: flux-system
-spec:
-  interval: 1m
-  url: oci://mcr.microsoft.com/application-lb/charts/alb-controller
----
+# apiVersion: source.toolkit.fluxcd.io/v1beta2
+# kind: OCIRepository
+# metadata:
+#   name: azure-alb
+#   namespace: flux-system
+# spec:
+#   interval: 1m
+#   url: oci://mcr.microsoft.com/application-lb/charts/alb-controller
+# ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
@@ -15,4 +15,4 @@ metadata:
 spec:
   type: oci
   interval: 5m0s
-  url: oci://mcr.microsoft.com/application-lb/charts/alb-controller
+  url: oci://mcr.microsoft.com/application-lb/charts
