--- a/gitops/cluster/helm.release.azure-alb.yaml
+++ b/gitops/cluster/helm.release.azure-alb.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: azure-controller
+      chart: alb-controller
       sourceRef:
         kind: HelmRepository
         name: azure-alb
