--- a/gitops/cluster/helm.release.azure-alb.yaml
+++ b/gitops/cluster/helm.release.azure-alb.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: azure-alb
+  name: alb-controller
   namespace: flux-system
 spec:
-  interval: 5m
+  interval: 2m
   chart:
     spec:
       chart: alb-controller
@@ -12,7 +12,7 @@ spec:
         kind: HelmRepository
         name: azure-alb
         namespace: flux-system
-      interval: 5m
+      interval: 2m
   targetNamespace: azure-alb-system
   values:
     albController:
