--- a/gitops/cluster/helm.release.azure-alb.yaml
+++ b/gitops/cluster/helm.release.azure-alb.yaml
@@ -15,10 +15,10 @@ spec:
         namespace: flux-system
       interval: 2m
   targetNamespace: azure-alb-system
-  # values:
-  #   albController:
-  #     podIdentity:
-  #       clientID:
-  #         secretRef:
-  #           name: cluster-configuration-protected-parameters
-  #           key: albidentityclientid
+  values:
+    albController:
+      podIdentity:
+        clientID:
+          secretRef:
+            name: cluster-configuration-protected-parameters
+            key: albidentityclientid
