--- a/gitops/cluster/containerinsights.yaml
+++ b/gitops/cluster/containerinsights.yaml
@@ -50,7 +50,7 @@ data:
        #[log_collection_settings.enable_multiline_logs]
           # fluent-bit based multiline log collection for go (stacktrace), dotnet (stacktrace)
           # if enabled will also stitch together container logs split by docker/cri due to size limits(16KB per log line)
-          # enabled = "false"
+          enabled = true
 
   prometheus-data-collection-settings: |-
     # Custom Prometheus metrics data collection settings
