--- a/gitops/cluster/helm.release.azure-alb.yaml
+++ b/gitops/cluster/helm.release.azure-alb.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: alb-controller
-      #version: 0.4.023971
+      version: 0.4.023971
       sourceRef:
         kind: HelmRepository
         name: azure-alb
