--- a/gitops/cluster/helm.repo.azure-alb.yaml
+++ b/gitops/cluster/helm.repo.azure-alb.yaml
@@ -7,12 +7,16 @@ spec:
   type: oci
   interval: 5m0s
   url: oci://mcr.microsoft.com/application-lb/charts
-# ---
-# apiVersion: source.toolkit.fluxcd.io/v1beta2
-# kind: OCIRepository
-# metadata:
-#   name: alb-controller
-#   namespace: flux-system
-# spec:
-#   interval: 5m0s
-#   url: oci://mcr.microsoft.com/application-lb/charts
+  ref:
+    tag: latest
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: alb-controller
+  namespace: flux-system
+spec:
+  interval: 5m0s
+  url: oci://mcr.microsoft.com/application-lb/charts
+  ref:
+    tag: 0.4.023971
