--- a/gitops/cluster/helm.oci.release.azure-alb.yaml
+++ b/gitops/cluster/helm.oci.release.azure-alb.yaml
@@ -1,20 +1,18 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+kind: Kustomization
 metadata:
   name: alb-controller
   namespace: flux-system
 spec:
   interval: 2m
-  chart:
-    spec:
-      chart: alb-controller
-      version: 0.4.023971
-      sourceRef:
-        kind: OCIRepository
-        name: alb-controller
-        namespace: flux-system
-      interval: 2m
-  targetNamespace: azure-alb-system
+  spec:
+    sourceRef:
+      kind: OCIRepository
+      name: alb-controller
+      namespace: flux-system
+    interval: 2m
+targetNamespace:
+  azure-alb-system
   # values:
   #   albController:
   #     podIdentity:
