--- a/gitops/cluster/helm.oci.release.azure-alb.yaml
+++ b/gitops/cluster/helm.oci.release.azure-alb.yaml
@@ -1,4 +1,4 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: alb-controller
