--- a/gitops/cluster/helm.oci.release.azure-alb.yaml
+++ b/gitops/cluster/helm.oci.release.azure-alb.yaml
@@ -11,8 +11,7 @@ spec:
       name: alb-controller
       namespace: flux-system
     interval: 2m
-targetNamespace:
-  azure-alb-system
+  targetNamespace: azure-alb-system
   # values:
   #   albController:
   #     podIdentity:
