--- a/gitops/cluster/helm.oci.release.azure-alb.yaml
+++ b/gitops/cluster/helm.oci.release.azure-alb.yaml
@@ -9,9 +9,9 @@ spec:
     sourceRef:
       kind: OCIRepository
       name: alb-controller
-      namespace: flux-system
+      #namespace: flux-system
     interval: 2m
-  targetNamespace: azure-alb-system
+    targetNamespace: azure-alb-system
   # values:
   #   albController:
   #     podIdentity:
