--- a/gitops/disable/helm.oci.release.azure-alb.yaml
+++ b/gitops/disable/helm.oci.release.azure-alb.yaml
@@ -10,12 +10,12 @@ spec:
   sourceRef:
     kind: OCIRepository
     name: alb-controller
-    #namespace: flux-system
+    namespace: flux-system
   targetNamespace: azure-alb-system
-  # values:
-  #   albController:
-  #     podIdentity:
-  #       clientID:
-  #         secretRef:
-  #           name: cluster-configuration-protected-parameters
-  #           key: albidentityclientid
+  values:
+    albController:
+      podIdentity:
+        clientID:
+          secretRef:
+            name: cluster-configuration-protected-parameters
+            key: albidentityclientid
